tests/suite/manifests/snippets-policy/empty-snippets-sp.yaml
kind: SnippetsPolicy
apiVersion: gateway.nginx.org/v1alpha1
metadata:
  name: empty-snippets-sp
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
