tests/suite/manifests/snippets-policy/gateway-2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-2
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
