tests/suite/manifests/snippets-policy/invalid-context-sp.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: SnippetsPolicy
metadata:
  name: invalid-context-sp
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  snippets:
  - context: http
    value: "worker_priority 0;"
