tests/suite/manifests/snippets-policy/invalid-duplicate-sp.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: SnippetsPolicy
metadata:
  name: invalid-duplicate-sp
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  snippets:
  - context: main
    value: "worker_processes 1;"
