tests/suite/manifests/snippets-policy/invalid-syntax-sp.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: SnippetsPolicy
metadata:
  name: invalid-syntax-sp
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  snippets:
  - context: http
    value: "gzip offf;"
