tests/suite/manifests/snippets-policy/location-sp.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: SnippetsPolicy
metadata:
  name: location-sp
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  snippets:
  - context: http.server.location
    value: allow 127.0.0.1;
