tests/suite/manifests/snippets-policy/multi-target-sp.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: SnippetsPolicy
metadata:
  name: multi-target-sp
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-2
  snippets:
  - context: main
    value: "env MULTI_TARGET;"
