tests/suite/manifests/snippets-policy/second-sp.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: SnippetsPolicy
metadata:
  name: second-sp
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  snippets:
  - context: http.server.location
    value: "add_header X-Second-Policy true;"
